[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = { version = "0.35.0", default-features = false }
ncollide3d = "0.33.0"
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
